[BUGFIX] Fix menu srolling issue on mobile

--- a/packages/typo3-docs-theme/assets/sass/layout/_structure.scss
+++ b/packages/typo3-docs-theme/assets/sass/layout/_structure.scss
@@ -57,10 +57,6 @@
     flex-grow: 0;
     background-color: #fff;
     z-index: 1;
-    position: sticky;
-    top: 114px;
-    height: auto;
-    overflow: auto;
     margin-left: calc(#{$grid-gutter-width} / 2 * -1);
     margin-right: calc(#{$grid-gutter-width} / 2 * -1);
     padding: calc(#{$grid-gutter-width} / 2);
@@ -75,6 +71,9 @@
         padding-right: calc(#{$grid-gutter-width} / 2);
         border-bottom: none;
         border-right: 1px solid rgba(0, 0, 0, .15);
+        position: sticky;
+        top: 114px;
+        overflow: auto;
     }
 }
 .page-main-content {
